package com.nanyin.pattern.iterator;

public interface Iterator<E> {
    boolean hasNext();
    E next();
}
